<?xml version="1.0"?>
<package format="3">
  <name>phidgets_stepper</name>
  <version>2.4.0</version>
  <description>Driver for the Phidgets Stepper devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author email="cedric.pradalier@georgiatech-metz.fr">Cedric Pradalier</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>phidgets_api</depend>
  <depend>phidgets_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
